# machine-intelligence

./: .gitignore  pyproject.toml
01-ThinkBayes2/notebooks/: chap01.ipynb
