[project]
name = "machine-intelligence"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "empiricaldist>=0.10.0",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "scipy>=1.18.0",
    "statsmodels>=0.14.6",
]
